    * "show string at" now respects newlines (\n in strings) [Ralph]
    * "read wall bit", "write wall bit" [Ralph]
    * "get npc sprite", "get hero sprite" convenience wrappers [Ralph]
    * Plotscripting Dictionary shows list of commands in each section [Ralph]
    * "replace substring" [Ralph]
    * "string equal" as alias for "string compare"
    * "create sprite" as alias for "load sprite"

  *** Changes
    * Default walking animation speed is 110ms/frame (like games running at
      the default 18fps) instead of 2 ticks/frame
    * "Previous attack" base ATK stat renamed to "Last damage by attacker"
    * Various general/battle/backcompat bitsets renamed or moved (see above)
    * "Caption" menu item type renamed to "Label", the "Unselectable" subtype
      of Labels renamed to "Disabled", and the "Close menu if selected" bit
      renamed to "Close menu when activated"
    * In-battle instant-run debug key moved from Ctrl-F4 to Ctrl-F5
    * Sorting inventory "by whether usable" considers battle uses too [Ralph]
    * Shops auto-quit when there's nothing left to buy, as they used to [Ralph]
    * Sprite slices can no longer be resized in the slice editor (except by
      setting to Fill Parent -- not recommended) [Ralph]
    * Camera is now focused by default on hero walkabout container instead of
      sprite (see "Camera following a hero/NPC centers on" setting) to fix
      glitches when using camera script commands with large walkabouts [Ralph]
    * Can import .wav files as music
    * You can activate NPCs while holding down an arrow key [Ralph]
    * "free slice(0)" no longer shows a warning
    * unlump no longer asks for game password

  *** Bugfixes
    * Fix a major memory leak while recording .gifs [Ralph]
    * Couldn't copy-paste text containing characters above ASCII 127 [Ralph]
    * Panel slices set to clip had broken child clipping and positioning
      when inside another clipping slice or over the screen edge [Ralph]