@@ -617,7 +617,8 @@ define function, begin
 591,getscrollbarstyle,1,0     # return current scroll slice scrollbar style
 592,setscrollcheckdepth,2,0,0 # change a scroll's child-check-depth
 593,getscrollcheckdepth,1,0   # return a scroll's current child-check-depth
-594,scrolltochild,2,0,0       # cause all the children of a Scroll Slice to move until a specific child is in view
+594,scrolltochild,3,0,0,0     # cause all the children of a Scroll Slice to move until a specific child is in view (parent, descendent, apply_padding)
+594,scrolltoslice,3,0,0,0     # alias
 595,runningonwindows,0        # returns true if the device is Windows
 596,runningonmac,0            # returns true if the device is Mac
 597,runningonlinux,0          # returns true if the device is Linux
